--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,11 @@
     @apply text-[15px] font-medium;
   }
   .nav-link {
-    @apply after:w-6 after:h-1 after:absolute after:left-0 after:-bottom-2 after:rounded-full after:bg-transparent after:hover:bg-[#b936f5] after:transition-all after:duration-300 relative;
+    @apply after:w-6 after:h-1 after:absolute after:left-0 after:-bottom-2 after:rounded-full after:bg-transparent after:hover:bg-bitRed after:transition-all after:duration-300 relative;
   }
   .btn {
-    @apply font-medium h-12 px-8 bg-gradient-to-r from-[#b936f5] to-[#f1006c] rounded text-[15px] hover:bg-gradient-to-l hover:from-[#b936f5] hover:to-[#f1006c] outline-none flex items-center justify-center cursor-pointer;
+    @apply font-medium h-12 px-8 bg-gradient-to-r from-[#DE1A1A] to-[#6B0F1A] rounded text-[15px] hover:bg-gradient-to-l hover:from-[#6B0F1A] hover:to-[#F7F9F9] outline-none flex items-center transition-all duration-300 ease-out justify-center cursor-pointer;
   }
+
 }
+
