--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply font-secondary bg-body text-white relative leading-relaxed font-extralight;
+    @apply font-secondary bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-white relative leading-relaxed font-extralight;
   }
   h1,
   h2,
@@ -15,10 +15,10 @@
     @apply font-primary;
   }
   a {
-    @apply text-[15px] font-medium;
+    @apply text-[15px] font-medium ;
   }
   .nav-link {
-    @apply after:w-6 after:h-1 after:absolute after:left-0 after:-bottom-2 after:rounded-full after:bg-transparent after:hover:bg-bitRed after:transition-all after:duration-300 relative;
+    @apply after:w-6 after:h-1  after:absolute after:left-0 after:-bottom-2 after:rounded-full after:bg-transparent after:hover:bg-bitRed after:transition-all after:duration-300 relative;
   }
   .btn {
     @apply font-medium h-12 px-8 bg-gradient-to-r from-[#DE1A1A] to-[#6B0F1A] rounded text-[15px] hover:bg-gradient-to-l hover:from-[#6B0F1A] hover:to-[#F7F9F9] outline-none flex items-center transition-all duration-300 ease-out justify-center cursor-pointer;
